[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Resources/Art/Props/medicine.png" type="Texture" id=2]
[ext_resource path="res://Resources/Art/Props/food.png" type="Texture" id=3]
[ext_resource path="res://Resources/UI/ThemeMAIN.tres" type="Theme" id=4]
[ext_resource path="res://Resources/Art/Props/lovePotion.png" type="Texture" id=5]

[node name="CanvasForPopups" type="Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tlo" type="ColorRect" parent="."]
margin_left = -361.0
margin_top = -161.0
margin_right = -321.0
margin_bottom = -121.0
rect_scale = Vector2( 38.8663, 29.2161 )
color = Color( 0, 0, 0, 0.709804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SleepPopUp" type="VBoxContainer" parent="."]
visible = false
margin_left = -43.0
margin_top = 505.0
margin_right = 271.0
margin_bottom = 579.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmSleep" type="ConfirmationDialog" parent="SleepPopUp"]
visible = true
margin_right = 314.0
margin_bottom = 74.0
rect_min_size = Vector2( 1, 1 )
theme = ExtResource( 4 )
window_title = ""
dialog_text = "Do you want to go to sleep?"

[node name="SlimeOptionsPopUp" type="Popup" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 228.0
margin_bottom = 248.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SlimeOptionsPanel" type="Panel" parent="SlimeOptionsPopUp"]
margin_right = 224.0
margin_bottom = 152.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="SlimeOptionsPopUp"]
margin_left = 25.0
margin_top = 8.0
margin_right = 65.0
margin_bottom = 48.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SlimeOptionsPopUp/NinePatchRect"]
margin_left = -17.0
margin_right = 89.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 80, 20 )
text = "Slime Care"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GiveMedicineButton" type="Button" parent="SlimeOptionsPopUp/NinePatchRect"]
anchor_right = 100.0
margin_left = -9.0
margin_top = 32.0
margin_right = -3814.0
margin_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "Give Medicine"
icon = ExtResource( 2 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GiveLPButton" type="Button" parent="SlimeOptionsPopUp/NinePatchRect"]
margin_left = -9.0
margin_top = 64.0
margin_right = 186.0
margin_bottom = 94.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 4 )
text = "Give Love Potion"
icon = ExtResource( 5 )
clip_text = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GiveFoodButton" type="Button" parent="SlimeOptionsPopUp/NinePatchRect"]
margin_left = -9.0
margin_top = 96.0
margin_right = 186.0
margin_bottom = 126.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Give Food"
icon = ExtResource( 3 )
clip_text = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="SlimeOptionsPopUp/NinePatchRect"]
margin_left = 159.0
margin_right = 207.0
margin_bottom = 48.0
rect_scale = Vector2( 0.5, 0.5 )
text = "X"

[connection signal="confirmed" from="SleepPopUp/ConfirmSleep" to="." method="_on_ConfirmSleep_confirmed"]
[connection signal="pressed" from="SlimeOptionsPopUp/NinePatchRect/GiveMedicineButton" to="." method="_on_GiveMedicineButton_pressed"]
[connection signal="pressed" from="SlimeOptionsPopUp/NinePatchRect/GiveLPButton" to="." method="_on_GiveLPButton_pressed"]
[connection signal="pressed" from="SlimeOptionsPopUp/NinePatchRect/GiveFoodButton" to="." method="_on_GiveFoodButton_pressed"]
[connection signal="pressed" from="SlimeOptionsPopUp/NinePatchRect/ExitButton" to="." method="_on_ExitButton_pressed"]
